--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "next dev",
+    "build:client": "next build",
+    "start:client": "next start"
   },
   "engines": {
     "node": "14.x"
@@ -22,6 +25,10 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "faker": "^5.5.3",
-    "pg": "^8.5.1"
+    "next": "^10.1.3",
+    "pg": "^8.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
