--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-/node_modules
-npm-debug.log
-.DS_Store
-/*.env
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -30,6 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
