--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Izzu Zantya Fawwas",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "husky": "^6.0.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
