--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "Izzu Zantya Fawwas",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "autoprefixer": "^10.2.5",
     "husky": "^6.0.0",
     "nodemon": "^2.0.7",
